syntax = "proto3";

package mediocre.image.v1beta;

message Image {
  int32 width = 1;
  int32 height = 2;
  bytes image_data = 3;
}